--- a/examples/docking/vs_demo_2.yml
+++ b/examples/docking/vs_demo_2.yml
@@ -79,6 +79,7 @@ steps:
       dt: 0.002
       temperature: 298.0
       pressure: 1.0
+
 - autodock_vina_rescore.yml:
     scatter: [input_pdb_path]
 
@@ -87,81 +88,99 @@ steps:
       xs: '*dGs'
       ys: '*docking_scores'
       ys2: '*docking_rescores'
-wic:
-  graphviz:
-    label: Virtual Screening Demo
-  steps:
-    (1, download_pdb.yml):
-      wic:
-        inlineable: False
-    (2, setup_pdb.yml):
-      wic:
-        inlineable: False # Due to yml wic tag inlineing issue and ~pdb_id
-        graphviz:
-          label: Setup PDB
-    (3, download_smiles_ligand_db.yml):
-      wic:
-        inlineable: False
-    (4, assign_partial_charges.yml):
-      wic:
-        inlineable: False
-    (5, autodock_vina_batch):
-      wic:
-        graphviz:
-          label: Docking
-    (6, split_pdbqt):
-      wic:
-        graphviz:
-          label: Extract Docking\nPoses
-    (7, duplicate):
-      wic:
-        graphviz:
-          label: Duplicate Receptor PDBQT
-    (8, autodock_vina_filter):
-      wic:
-        graphviz:
-          label: Apply Docking\nScore Cutoff
-    (9, gen_topol_params.yml):
-      wic:
-        inlineable: False
-    (10, stability.yml):
-      wic:
-        inlineable: False # Due to yml wic tag inlineing issue and ~ inputs
-        steps:
-          (1, setup.yml):
-            wic:
-              steps:
-                (4, genion):
-                  in:
-                    output_top_zip_path: '&genion_complex.zip'
-          (2, basic.yml):
-            wic:
-              steps:
-                (3, prod.yml):
-                  wic:
-                    steps:
-                      (2, grompp):
-                        in:
-                          input_top_zip_path: '*genion_complex.zip'
-                      (3, mdrun):
-                        in:
-                          output_crd_path: '&prod_complex.gro'
-                      (4, cwl_watcher_analysis.yml):
-                        wic:
-                          backend: complex
-          (3, analysis.yml):
-            wic:
-              steps:
-                (1, analysis_realtime.yml):
-                  wic:
-                    backend: complex
-                (2, analysis_final.yml):
-                  wic:
-                    backend: complex
-    (11, autodock_vina_rescore.yml):
-      wic:
-        inlineable: False
-    (12, scatter_plot):
-      wic:
-        graphviz:
-          label: Plot Experimental\nvs Predicted Binding
+# wic:
+#   graphviz:
+#     label: Virtual Screening Demo
+#   steps:
+#     (1, download_pdb.yml):
+#       wic:
+#         inlineable: False
+#     (2, setup_pdb.yml):
+#       wic:
+#         inlineable: False # Due to yml wic tag inlineing issue and ~pdb_id
+#         graphviz:
+#           label: Setup PDB
+#     (3, download_smiles_ligand_db.yml):
+#       wic:
+#         inlineable: False
+#     (4, assign_partial_charges.yml):
+#       wic:
+#         inlineable: False
+#     (5, autodock_vina_batch):
+#       wic:
+#         graphviz:
+#           label: Docking
+#     (6, split_pdbqt):
+#       wic:
+#         graphviz:
+#           label: Extract Docking\nPoses
+#     (7, duplicate):
+#       wic:
+#         graphviz:
+#           label: Duplicate Receptor PDBQT
+#     (8, autodock_vina_filter):
+#       wic:
+#         graphviz:
+#           label: Apply Docking\nScore Cutoff
+#     (9, gen_topol_params.yml):
+#       wic:
+#         inlineable: False
+#     #     steps:
+#     #       (8, combine_pdb): #(7, append_ligand):
+#     #         in:
+#     #           output_structure_path: '&complex_vac.pdb'
+#     # (10, stability.yml):
+#     #   wic:
+#     #     inlineable: False # Due to yml wic tag inlineing issue and ~ inputs
+#     #     steps:
+#     #       (1, setup_vac_min.yml):
+#     #         wic:
+#     #           steps:
+#     #             (1, topology.yml):
+#     #               wic:
+#     #                 steps:
+#     #                   (2, grompp):
+#     #                     in:
+#     #                       input_top_zip_path: '*complex_vac.pdb'
+
+#     (10, stability.yml):
+#       wic:
+#         inlineable: False # Due to yml wic tag inlineing issue and ~ inputs
+#         steps:
+#           (1, setup.yml):
+#             wic:
+#               steps:
+#                 (4, genion):
+#                   in:
+#                     output_top_zip_path: '&genion.zip'
+#           (2, basic.yml):
+#             wic:
+#               steps:
+#                 (3, prod.yml):
+#                   wic:
+#                     steps:
+#                       (2, grompp):
+#                         in:
+#                           input_top_zip_path: '*genion.zip'
+#                       (3, mdrun):
+#                         in:
+#                           output_crd_path: '&prod.gro'
+#                       (4, cwl_watcher_analysis.yml):
+#                         wic:
+#                           backend: complex
+#           (3, analysis.yml):
+#             wic:
+#               steps:
+#                 (1, analysis_realtime.yml):
+#                   wic:
+#                     backend: complex
+#                 (2, analysis_final.yml):
+#                   wic:
+#                     backend: complex
+#     (11, autodock_vina_rescore.yml):
+#       wic:
+#         inlineable: False
+#     (12, scatter_plot):
+#       wic:
+#         graphviz:
+#           label: Plot Experimental\nvs Predicted Binding
